[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.6.0",
    "pybind11-global~=2.6.0",
    "cmake>=3.16.3",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp3*-*"
manylinux-x86_64-image = "manylinux2010"
manylinux-i686-image = "manylinux2010"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
