[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.6.0",
    "pybind11-global~=2.6.0",
    "cmake>=3.16.3",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Only build for Linux
archs = "auto64"

[tool.cibuildwheel.linux]
build = "cp3*-*"
# Use manylinux2014 only
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

