[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.6.0",
    "pybind11-global~=2.6.0",
    "cmake>=3.16.3",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
build = "cp3*-*"
skip = ""
test-skip = ""

archs = "auto64"
build-frontend = "default"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = ""

before-all = ""
before-build = ""
repair-wheel-command = ""

test-command = ""
before-test = ""
test-requires = "pytest"
test-command = "pytest {project}/api/python/test"

container-engine = "docker"

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
